--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-beasties-container="">
+<html lang="en" data-beasties-container>
 
 <head>
   <meta charset="utf-8">
@@ -9,7 +9,7 @@
   <base href="/cabbingov2/">
 <style>@font-face{font-family:Runescape;src:url("./media/RuneScape-Plain-12-T6CWJQYQ.otf") format("opentype")}@font-face{font-family:Runescape-Bold;font-weight:700;src:url("./media/RuneScape-Bold-12-YYN5KYKT.otf") format("opentype")}body{background:#000;color:#fff;font-family:Runescape-Bold;text-shadow:black 2px 2px;font-size:16px;margin:0;overflow:auto}</style><link rel="stylesheet" href="styles-IQOGHLRY.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-IQOGHLRY.css"></noscript></head>
 
-<body ngcm="">
+<body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <app-root></app-root>
 <script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-USPG2TVY.js" type="module"></script></body>
