--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <base href="/cabbingo/">
-<style>@font-face{font-family:Runescape;src:url("./media/RuneScape-Plain-12-T6CWJQYQ.otf") format("opentype")}@font-face{font-family:Runescape-Bold;font-weight:700;src:url("./media/RuneScape-Bold-12-YYN5KYKT.otf") format("opentype")}body{background:#000;color:#fff;font-family:Runescape-Bold;text-shadow:black 2px 2px 2px;font-size:16px;margin:0}</style><link rel="stylesheet" href="styles-KVDCUZLX.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-KVDCUZLX.css"></noscript></head>
+<style>@font-face{font-family:Runescape;src:url("./media/RuneScape-Plain-12-T6CWJQYQ.otf") format("opentype")}@font-face{font-family:Runescape-Bold;font-weight:700;src:url("./media/RuneScape-Bold-12-YYN5KYKT.otf") format("opentype")}body{background:#000;color:#fff;font-family:Runescape-Bold;text-shadow:black 2px 2px 2px;font-size:16px;margin:0}</style><link rel="stylesheet" href="styles-XGGOIWBV.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-XGGOIWBV.css"></noscript></head>
 
 <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <app-root></app-root>
-<script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-66GGYQMU.js" type="module"></script></body>
+<script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-H4A2RNNH.js" type="module"></script></body>
 
 </html>
